2009-05-21  Andrew John Hughes  <ahughes@redhat.com>

	* patches/icedtea-pregenerated-nimbus.patch:
	Also patch the Nimbus Makefile to not set
	CLASSES_INIT and thus avoid invoking the
	generator.

2009-05-21  Andrew John Hughes  <ahughes@redhat.com>

	* patches/ecj/icedtea-pr39408.patch:
	Updated to put the file in the state
	where PR40188 is present so that gcj 4.3
	builds work.

2009-05-21  Andrew John Hughes  <ahughes@redhat.com>

	* patches/icedtea-stop-nimbus-generation.patch:
	Renamed.
	* Makefile.am:
	Turn on DISABLE_NIMBUS unless generating files.
	To still build, apply the pregenerated-nimbus patch.
	* patches/icedtea-pregenerated-nimbus.patch:
	Turns the make/javax/swing/plaf/nimbus subdirectory
	back on.

2009-05-21  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Update list of generated files with
	Nimbus source.
	* acinclude.m4:
	Turn off Nimbus source code generation by default.

2009-05-21  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Apply patch and use our generated source directory
	when ENABLE_NIMBUS_GENERATION is not enabled.  Symlink
	JIBX when it is.
	* acinclude.m4:
	(AC_CHECK_ENABLE_NIMBUS_GENERATION): New macro.
	* configure.ac:
	Turn on ENABLE_NIMBUS_GENERATION and only check for
	JIBX when this is enabled.
	* generated/javax/swing/plaf/nimbus/ArrowButtonPainter.java,
	* generated/javax/swing/plaf/nimbus/ButtonPainter.java,
	* generated/javax/swing/plaf/nimbus/CheckBoxMenuItemPainter.java,
	* generated/javax/swing/plaf/nimbus/CheckBoxPainter.java,
	* generated/javax/swing/plaf/nimbus/ComboBoxComboBoxArrowButtonEditableState.java,
	* generated/javax/swing/plaf/nimbus/ComboBoxComboBoxArrowButtonPainter.java,
	* generated/javax/swing/plaf/nimbus/ComboBoxComboBoxTextFieldPainter.java,
	* generated/javax/swing/plaf/nimbus/ComboBoxEditableState.java,
	* generated/javax/swing/plaf/nimbus/ComboBoxPainter.java,
	* generated/javax/swing/plaf/nimbus/DesktopIconPainter.java,